force-app/main/default/objects/OrderItem/fields/Acao_interna__c.field-meta.xml
<CustomField>
    <fullName>Acao_interna__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ação interna</label>
    <type>Checkbox</type>
</CustomField>