force-app/main/default/objects/OrderItem/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Ativo (del)</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>Produtos_do_pedido</relationshipName>
    <type>Lookup</type>
</CustomField>