force-app/main/default/objects/OrderItem/fields/C_d_de_F_brica__c.field-meta.xml
<CustomField>
    <fullName>C_d_de_F_brica__c</fullName>
    <label>Cód. de Fábrica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>