force-app/main/default/objects/OrderItem/fields/checklist_envio__c.field-meta.xml
<CustomField>
    <fullName>checklist_envio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Envio</label>
    <type>Checkbox</type>
</CustomField>