force-app/main/default/objects/OrderItem/fields/checklist_retorno__c.field-meta.xml
<CustomField>
    <fullName>checklist_retorno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Retorno</label>
    <type>Checkbox</type>
</CustomField>