force-app/main/default/objects/OrderItem/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <formula>Order.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>