force-app/main/default/objects/OrderItem/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <formula>Order.Account.CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ</label>
    <type>Text</type>
</CustomField>