force-app/main/default/objects/OrderItem/fields/Codigo_fabricante__c.field-meta.xml
<CustomField>
    <fullName>Codigo_fabricante__c</fullName>
    <formula>PricebookEntry.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código fabricante</label>
    <type>Text</type>
</CustomField>