force-app/main/default/objects/OrderItem/fields/Codigo_Hospcom__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Hospcom__c</fullName>
    <formula>PricebookEntry.Product2.StockKeepingUnit</formula>
    <label>Código Hospcom</label>
    <type>Text</type>
</CustomField>