force-app/main/default/objects/OrderItem/fields/Custo__c.field-meta.xml
<CustomField>
    <fullName>Custo__c</fullName>
    <inlineHelpText>Informação integrada SAP -&gt; Salesforce. O Custo é calculado com: Total do item na NF de entrada / quantidade</inlineHelpText>
    <label>Custo</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>