force-app/main/default/objects/OrderItem/fields/Data_da_instalacao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_instalacao__c</fullName>
    <label>_Data da instalação (del)</label>
    <type>Date</type>
</CustomField>