force-app/main/default/objects/OrderItem/fields/Data_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Data_de_entrega__c</fullName>
    <inlineHelpText>Da Hospcom ao cliente, maior data dentre as entregas do item.</inlineHelpText>
    <label>_Data de entrega (del)</label>
    <type>Date</type>
</CustomField>