force-app/main/default/objects/OrderItem/fields/Data_de_Entrega_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Entrega_Fornecedor__c</fullName>
    <label>_Data de Entrega Fornecedor (old) (del)</label>
    <type>Date</type>
</CustomField>