force-app/main/default/objects/OrderItem/fields/Data_de_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_recebimento__c</fullName>
    <inlineHelpText>Do Fornecedor/Estoque a Hospcom, maior data dentre as requisições do item.</inlineHelpText>
    <label>_Data de recebimento (del)</label>
    <type>Date</type>
</CustomField>