force-app/main/default/objects/OrderItem/fields/Data_de_requisicao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_requisicao__c</fullName>
    <inlineHelpText>Ao Compras/Estoque, maior data dentre as requisições do item.</inlineHelpText>
    <label>_Data de requisição (del)</label>
    <type>Date</type>
</CustomField>