force-app/main/default/objects/OrderItem/fields/Descricao_da_linha__c.field-meta.xml
<CustomField>
    <fullName>Descricao_da_linha__c</fullName>
    <label>Descrição da linha</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>