force-app/main/default/objects/OrderItem/fields/Descricao_fonte__c.field-meta.xml
<CustomField>
    <fullName>Descricao_fonte__c</fullName>
    <formula>PricebookEntry.Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição fonte</label>
    <type>Text</type>
</CustomField>