force-app/main/default/objects/OrderItem/fields/Equipamentos_convertidos__c.field-meta.xml
<CustomField>
    <fullName>Equipamentos_convertidos__c</fullName>
    <label>Equipamentos convertidos</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>