force-app/main/default/objects/OrderItem/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>Order.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>