force-app/main/default/objects/OrderItem/fields/Falta_faturar_prop__c.field-meta.xml
<CustomField>
    <fullName>Falta_faturar_prop__c</fullName>
    <formula>IF(Order.TotalAmount == 0, 0, 
(Pre_o_Total2__c / Order.TotalAmount) *  Order.Falta_Faturar__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Falta faturar (prop)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>