force-app/main/default/objects/OrderItem/fields/Faturamento_Notificado__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Notificado__c</fullName>
    <formula>Order.Notificado_Faturamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faturamento Notificado</label>
    <type>Checkbox</type>
</CustomField>