force-app/main/default/objects/OrderItem/fields/Final_Ag_Compra__c.field-meta.xml
<CustomField>
    <fullName>Final_Ag_Compra__c</fullName>
    <label>Final Ag Compra</label>
    <type>DateTime</type>
</CustomField>