force-app/main/default/objects/OrderItem/fields/Final_Ag_Entrega_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Final_Ag_Entrega_Cliente__c</fullName>
    <label>Final Ag Entrega Cliente</label>
    <type>DateTime</type>
</CustomField>