force-app/main/default/objects/OrderItem/fields/Final_Ag_Entrega_Forn__c.field-meta.xml
<CustomField>
    <fullName>Final_Ag_Entrega_Forn__c</fullName>
    <label>Final Ag Entrega Forn</label>
    <type>DateTime</type>
</CustomField>