force-app/main/default/objects/OrderItem/fields/Final_Em_Rota__c.field-meta.xml
<CustomField>
    <fullName>Final_Em_Rota__c</fullName>
    <label>Final Em Rota</label>
    <type>DateTime</type>
</CustomField>