force-app/main/default/objects/OrderItem/fields/Final_Em_Separacao__c.field-meta.xml
<CustomField>
    <fullName>Final_Em_Separacao__c</fullName>
    <label>Final Em Separação</label>
    <type>DateTime</type>
</CustomField>