force-app/main/default/objects/OrderItem/fields/Final_Novo__c.field-meta.xml
<CustomField>
    <fullName>Final_Novo__c</fullName>
    <label>Final Novo</label>
    <type>DateTime</type>
</CustomField>