force-app/main/default/objects/OrderItem/fields/Final_Pendencia_Interna__c.field-meta.xml
<CustomField>
    <fullName>Final_Pendencia_Interna__c</fullName>
    <label>Final Pendencia Interna</label>
    <type>DateTime</type>
</CustomField>