force-app/main/default/objects/OrderItem/fields/Final_Recebido__c.field-meta.xml
<CustomField>
    <fullName>Final_Recebido__c</fullName>
    <label>Final Recebido</label>
    <type>DateTime</type>
</CustomField>