force-app/main/default/objects/OrderItem/fields/Final_Reservado__c.field-meta.xml
<CustomField>
    <fullName>Final_Reservado__c</fullName>
    <label>Final Reservado</label>
    <type>DateTime</type>
</CustomField>