force-app/main/default/objects/OrderItem/fields/Horas_teis_Em_Cota_o_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Horas_teis_Em_Cota_o_de_compra__c</fullName>
    <formula>10 * (
( 5 * FLOOR( ( DATEVALUE(  Final_Em_cotacao_de_compra__c  ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Final_Em_cotacao_de_compra__c  ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 10 * ( MOD( Final_Em_cotacao_de_compra__c  - DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE(  Inicio_Em_cotacao_de_compra__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Inicio_Em_cotacao_de_compra__c) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 10 * ( MOD( Inicio_Em_cotacao_de_compra__c- DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1) ) )
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Úteis Em Cotação de compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>