force-app/main/default/objects/OrderItem/fields/Horas_Uteis_Ag_Entrega_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Horas_Uteis_Ag_Entrega_Cliente__c</fullName>
    <formula>10 * (
( 5 * FLOOR( ( DATEVALUE(  Final_Ag_Entrega_Cliente__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Final_Ag_Entrega_Cliente__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 10 * ( MOD( Final_Ag_Entrega_Cliente__c - DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE(  Inicio_Ag_Entrega_Cliente__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( Inicio_Ag_Entrega_Cliente__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 10 * ( MOD( Inicio_Ag_Entrega_Cliente__c - DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1) ) )
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Úteis Ag Entrega Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>