force-app/main/default/objects/OrderItem/fields/ID_do_Pedido_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>ID_do_Pedido_de_Compra__c</fullName>
    <label>ID do Pedido de Compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>