force-app/main/default/objects/OrderItem/fields/Inicio_Ag_Coleta__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Ag_Coleta__c</fullName>
    <label>Inicio Ag Coleta</label>
    <type>DateTime</type>
</CustomField>