force-app/main/default/objects/OrderItem/fields/Inicio_Ag_Compra__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Ag_Compra__c</fullName>
    <label>Inicio Ag Compra</label>
    <type>DateTime</type>
</CustomField>