force-app/main/default/objects/OrderItem/fields/Inicio_Ag_Conferencia__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Ag_Conferencia__c</fullName>
    <label>Inicio Ag Conferencia</label>
    <type>DateTime</type>
</CustomField>