force-app/main/default/objects/OrderItem/fields/Inicio_Ag_Entrega_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Ag_Entrega_Cliente__c</fullName>
    <label>Inicio Ag Entrega Cliente</label>
    <type>DateTime</type>
</CustomField>