force-app/main/default/objects/OrderItem/fields/Inicio_Ag_Entrega_Forn__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Ag_Entrega_Forn__c</fullName>
    <label>Inicio Ag Entrega Forn</label>
    <type>DateTime</type>
</CustomField>