force-app/main/default/objects/OrderItem/fields/Inicio_Ag_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Ag_Faturamento__c</fullName>
    <label>Inicio Ag Faturamento</label>
    <type>DateTime</type>
</CustomField>