force-app/main/default/objects/OrderItem/fields/Inicio_Em_cotacao_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Em_cotacao_de_compra__c</fullName>
    <label>Inicio Em cotação de compra</label>
    <type>DateTime</type>
</CustomField>