force-app/main/default/objects/OrderItem/fields/Inicio_Em_Rota__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Em_Rota__c</fullName>
    <label>Inicio Em Rota</label>
    <type>DateTime</type>
</CustomField>