force-app/main/default/objects/OrderItem/fields/Inicio_Faturado__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Faturado__c</fullName>
    <label>Inicio Faturado</label>
    <type>DateTime</type>
</CustomField>