force-app/main/default/objects/OrderItem/fields/Inicio_Reservado__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Reservado__c</fullName>
    <label>Inicio Reservado</label>
    <type>DateTime</type>
</CustomField>