force-app/main/default/objects/OrderItem/fields/Item_Pai__c.field-meta.xml
<CustomField>
    <fullName>Item_Pai__c</fullName>
    <label>Item Pai</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>