force-app/main/default/objects/OrderItem/fields/Linha2__c.field-meta.xml
<CustomField>
    <fullName>Linha2__c</fullName>
    <label>Linha*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>