force-app/main/default/objects/OrderItem/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <formula>IF( Order.VETERIN_RIA__c &gt; 0, &apos;VETERINÁRIA PMLS&apos;,
IF( AND(Order.Linha_Locacao__c != &apos;&apos;, TEXT(Order.Natureza_de_Opera_o__c) = &apos;LOCAÇÃO&apos;, OR(TEXT(Product2.Linha__c) == &apos;&apos;, TEXT(Product2.Linha__c) == &apos;OUTROS&apos;)), Order.Linha_Locacao__c,  TEXT(Product2.Linha__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linha</label>
    <type>Text</type>
</CustomField>