force-app/main/default/objects/OrderItem/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <length>50</length>
    <type>Text</type>
</CustomField>