force-app/main/default/objects/OrderItem/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Marca__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>