force-app/main/default/objects/OrderItem/fields/Margem_bruta__c.field-meta.xml
<CustomField>
    <fullName>Margem_bruta__c</fullName>
    <formula>(UnitPrice - Custo__c) / (UnitPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margem bruta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>