force-app/main/default/objects/OrderItem/fields/Margem_bruta_total__c.field-meta.xml
<CustomField>
    <fullName>Margem_bruta_total__c</fullName>
    <formula>(Pre_o_Total2__c - Custo_total__c) / (Pre_o_Total2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margem bruta total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>