force-app/main/default/objects/OrderItem/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>MONTH(Order.Data_de_ativacao__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>