force-app/main/default/objects/OrderItem/fields/natureza__c.field-meta.xml
<CustomField>
    <fullName>natureza__c</fullName>
    <formula>TEXT(Order.Natureza_de_Opera_o__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>natureza</label>
    <type>Text</type>
</CustomField>