force-app/main/default/objects/OrderItem/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome*</label>
    <type>Text</type>
</CustomField>