force-app/main/default/objects/OrderItem/fields/Notificar__c.field-meta.xml
<CustomField>
    <fullName>Notificar__c</fullName>
    <label>Notificar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>