force-app/main/default/objects/OrderItem/fields/Numero_da_demo__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_demo__c</fullName>
    <formula>Order.Demonstracao__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número da demo</label>
    <type>Text</type>
</CustomField>