force-app/main/default/objects/OrderItem/fields/Numero_de_Serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Serie__c</fullName>
    <label>_Número de Série (del)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>