force-app/main/default/objects/OrderItem/fields/Numero_do_Item_SAP__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Item_SAP__c</fullName>
    <label>Numero do Item SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>