force-app/main/default/objects/OrderItem/fields/Numero_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_pedido__c</fullName>
    <formula>Order.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero do pedido</label>
    <type>Text</type>
</CustomField>