force-app/main/default/objects/OrderItem/fields/Numero_do_pedido_de_compra2__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_pedido_de_compra2__c</fullName>
    <formula>IF(ID_do_Pedido_de_Compra__c = &apos;&apos;, Numero_do_pedido_de_compra__c,
HYPERLINK(&quot;https://hospcom.my.site.com/Sales/s/pedido-de-compra/&quot; + ID_do_Pedido_de_Compra__c ,  Numero_do_pedido_de_compra__c , &apos;_blank&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do pedido de compra</label>
    <type>Text</type>
</CustomField>