force-app/main/default/objects/OrderItem/fields/Numeros_de_serie__c.field-meta.xml
<CustomField>
    <fullName>Numeros_de_serie__c</fullName>
    <label>Numeros de serie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>