force-app/main/default/objects/OrderItem/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <label>_Ordem (del)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>