force-app/main/default/objects/OrderItem/fields/Origem_Interna__c.field-meta.xml
<CustomField>
    <fullName>Origem_Interna__c</fullName>
    <label>Origem Interna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Importado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>