force-app/main/default/objects/OrderItem/fields/Pedido_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Tipo__c</fullName>
    <formula>Order.Tipo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Pedido Tipo (del)</label>
    <type>Text</type>
</CustomField>