force-app/main/default/objects/OrderItem/fields/Prazo_de_entrega_formatado__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_entrega_formatado__c</fullName>
    <formula>IF(
DAY(Prazo_de_recebimento_da_compra__c) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(Prazo_de_recebimento_da_compra__c)),
TEXT(DAY(Prazo_de_recebimento_da_compra__c))
)
+ &quot;/&quot; +
IF(
MONTH(Prazo_de_recebimento_da_compra__c) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Prazo_de_recebimento_da_compra__c)),
TEXT(MONTH(Prazo_de_recebimento_da_compra__c))
)
+ &quot;/&quot; +
TEXT(YEAR(Prazo_de_recebimento_da_compra__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo de entrega (formatado)</label>
    <type>Text</type>
</CustomField>