force-app/main/default/objects/OrderItem/fields/Prazo_de_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_recebimento__c</fullName>
    <inlineHelpText>Do Fornecedor a Hospcom, maior prazo dentre as requisições do item.</inlineHelpText>
    <label>_Prazo de recebimento (del)</label>
    <type>Date</type>
</CustomField>