force-app/main/default/objects/OrderItem/fields/Prazo_de_recebimento_da_compra__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_recebimento_da_compra__c</fullName>
    <label>Prazo de recebimento da compra</label>
    <type>Date</type>
</CustomField>