force-app/main/default/objects/OrderItem/fields/Pre_o_Total2__c.field-meta.xml
<CustomField>
    <fullName>Pre_o_Total2__c</fullName>
    <formula>UnitPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Total*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>