force-app/main/default/objects/OrderItem/fields/Previs_o_Einstein_2__c.field-meta.xml
<CustomField>
    <fullName>Previs_o_Einstein_2__c</fullName>
    <label>Previsão Einstein 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>