force-app/main/default/objects/OrderItem/fields/previsao_pc__c.field-meta.xml
<CustomField>
    <fullName>previsao_pc__c</fullName>
    <label>Previsão para gerar Pedido de Compra</label>
    <type>Date</type>
</CustomField>