force-app/main/default/objects/OrderItem/fields/Produto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Produto_Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Produto Principal (del)</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Acessórios</relationshipLabel>
    <relationshipName>Produtos_do_pedido</relationshipName>
    <type>Lookup</type>
</CustomField>