force-app/main/default/objects/OrderItem/fields/Quantidade_a_requisitar_novo__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_a_requisitar_novo__c</fullName>
    <formula>Quantity -  Quantidade_requisitada2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade a requisitar (novo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>