force-app/main/default/objects/OrderItem/fields/Quantidade_entregue__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_entregue__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Ao Cliente, soma total das entregas do item.</inlineHelpText>
    <label>_Quantidade entregue (del)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>