force-app/main/default/objects/OrderItem/fields/Quantidade_falta_entregar__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_falta_entregar__c</fullName>
    <formula>Quantidade_recebida__c - Quantidade_entregue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Quantidade falta entregar (del)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>