force-app/main/default/objects/OrderItem/fields/Quantidade_falta_requisitar__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_falta_requisitar__c</fullName>
    <formula>Quantity -  Quantidade_requisitada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade falta requisitar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>