force-app/main/default/objects/OrderItem/fields/Quantidade_recebida__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_recebida__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Do Compras/Estoque, soma total dos recebimentos do item.</inlineHelpText>
    <label>_Quantidade recebida (del)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>