force-app/main/default/objects/OrderItem/fields/Quantidade_requisitada2__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_requisitada2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade requisitada (novo)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>