force-app/main/default/objects/OrderItem/fields/Quantidade_requisitada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_requisitada__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Ao Compras/Estoque, soma total das requisições do item.</inlineHelpText>
    <label>_Quantidade requisitada (del)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>