force-app/main/default/objects/OrderItem/fields/Quantidade_vinculada_comodato__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_vinculada_comodato__c</fullName>
    <label>Quantidade vinculada (comodato)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>