force-app/main/default/objects/OrderItem/fields/Resumo__c.field-meta.xml
<CustomField>
    <fullName>Resumo__c</fullName>
    <label>_Resumo (del)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Requisitado</fullName>
            </value>
            <value>
                <fullName>Requisitado Parcial</fullName>
            </value>
            <value>
                <fullName>Requisitado Total</fullName>
            </value>
            <value>
                <fullName>Não Comprado</fullName>
            </value>
            <value>
                <fullName>Comprado Parcial</fullName>
            </value>
            <value>
                <fullName>Comprado Total</fullName>
            </value>
            <value>
                <fullName>Não Recebido</fullName>
            </value>
            <value>
                <fullName>Recebido Parcial</fullName>
            </value>
            <value>
                <fullName>Recebido Total</fullName>
            </value>
            <value>
                <fullName>Não Entregue</fullName>
            </value>
            <value>
                <fullName>Entregue Parcial</fullName>
            </value>
            <value>
                <fullName>Entregue Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>