force-app/main/default/objects/OrderItem/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <formula>TEXT( Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status2</label>
    <type>Text</type>
</CustomField>