force-app/main/default/objects/OrderItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Transferência Interna</fullName>
            </value>
            <value>
                <fullName>Pendência Interna</fullName>
            </value>
            <value>
                <fullName>Em Separação</fullName>
            </value>
            <value>
                <fullName>Galpão - Em Separação</fullName>
            </value>
            <value>
                <fullName>Separado</fullName>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>OPR - ANALISE DE COMPRA</fullName>
            </value>
            <value>
                <fullName>CMP - COTAÇÃO DE COMPRA</fullName>
            </value>
            <value>
                <fullName>CMP - AG. ENTREGA FORNECEDOR</fullName>
            </value>
            <value>
                <fullName>Recebido Fornecedor</fullName>
            </value>
            <value>
                <fullName>Recebido A.T.</fullName>
            </value>
            <value>
                <fullName>Aguardando Faturamento</fullName>
            </value>
            <value>
                <fullName>Aguardando conferência</fullName>
            </value>
            <value>
                <fullName>Atendido</fullName>
            </value>
            <value>
                <fullName>Faturado</fullName>
            </value>
            <value>
                <fullName>Aguardando Coleta</fullName>
            </value>
            <value>
                <fullName>Em Avaliação Técnica</fullName>
            </value>
            <value>
                <fullName>CMP - AG. COMPRA IMPORTAÇÃO</fullName>
            </value>
            <value>
                <fullName>CMP - AG. COMPRA NACIONAL</fullName>
            </value>
            <value>
                <fullName>Em rota de entrega</fullName>
            </value>
            <value>
                <fullName>Entregue Cliente</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
                <label>OPR - CANCELADO</label>
            </value>
            <value>
                <fullName>Devolvido</fullName>
            </value>
            <value>
                <fullName>Recebido Parcial</fullName>
            </value>
            <value>
                <fullName>Recebido Total</fullName>
            </value>
            <value>
                <fullName>CMP - EM PRODUÇÃO FORN.</fullName>
            </value>
            <value>
                <fullName>CMP - EM COLETA PORTO/FORNECEDOR</fullName>
            </value>
            <value>
                <fullName>Em trânsito</fullName>
            </value>
            <value>
                <fullName>CMP - EM DESEMBARAÇO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>